--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,10 @@
 
   <%= image_tag @user.avatar, class: "mx-auto d-block" %> <br /> <%# this is for viewing the avatar attachment we add i.e  single image%>
 
-  
+  <div class="my-5">
+    <h4 class="text-center text-white"><%= @user.content %></h4>
+  </div>
+
   <% if logged_in? && current_user == @user %>
     <div class="text-center mt-2">
       <%= link_to "Edit Profile", edit_user_path(@user), class:"btn btn-outline-info mb-3 text-center col-2" %>
