--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,8 @@
           </div>
 
           <div class="mt-3">
-            <%= link_to gravatar_for(user, size: 150), user %>
+            <!-- <%= link_to gravatar_for(user, size: 150), user %> -->
+            <%= image_tag user.avatar, width: "200", class: "mx-auto d-block" %> <br /> <%# this is for viewing the avatar attachment we add i.e  single image%>
           </div>
 
           <div class="mt-1 fst-italic fw-bold">
