--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 
   <%= image_tag @user.avatar, class: "mx-auto d-block" %> <br /> <%# this is for viewing the avatar attachment we add i.e  single image%>
 
-  <div class="my-5">
+  <div class="my-5 text-center">
     <% if @user.images.attached? %>
       <% @user.images.each do |image| %>
         <%= image_tag(image, height: 200) %>
